# rust-review

./: Cargo.toml  README.md
03/: comment.rs  compound_type.rs  constant.rs  control_flow.rs  function.rs  scalar_type.rs  shadowing.rs  statement_and_expression.rs  variable.rs
04/: ownership.rs  reference_and_borrowing.rs  slice.rs
05/: rectangles.rs  struct.rs
06/: enum.rs  if_let.rs  match.rs  option.rs
08/: hashmap.rs  string.rs  vector.rs
09/: panic.rs  result.rs
o7/: README.md
o7-backyard/: Cargo.toml
o7-backyard/src/: garden.rs  main.rs
o7-restaurant/: Cargo.toml
o7-restaurant/src/: lib.rs  main.rs
o7/src/: lib.rs  main.rs
