bin = [
  { name = "hello", path = "01/hello.rs" },
  { name = "variable", path = "03/variable.rs" },
  { name = "constant", path = "03/constant.rs" },
  { name = "shadowing", path = "03/shadowing.rs" },
  { name = "scalar_type", path = "03/scalar_type.rs" },
  { name = "compound_type", path = "03/compound_type.rs" },
  { name = "function", path = "03/function.rs" },
  { name = "statement_and_expression", path = "03/statement_and_expression.rs" },
  { name = "comment", path = "03/comment.rs" },
  { name = "control_flow", path = "03/control_flow.rs" },
  { name = "guess_number", path = "02/guess_number.rs" },
  { name = "ownership", path = "04/ownership.rs" },
  { name = "reference_and_borrowing", path = "04/reference_and_borrowing.rs" },
  { name = "slice", path = "04/slice.rs" },
]

[package]
name = "rust-review"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
