bin = [
  { name = "hello", path = "01/hello.rs" },
  { name = "variable", path = "03/variable.rs" },
  { name = "constant", path = "03/constant.rs" },
  { name = "shadowing", path = "03/shadowing.rs" },
  { name = "scalar_type", path = "03/scalar_type.rs" },
  { name = "compound_type", path = "03/compound_type.rs" },
  { name = "function", path = "03/function.rs" },
  { name = "statement_and_expression", path = "03/statement_and_expression.rs" },
  { name = "comment", path = "03/comment.rs" },
  { name = "control_flow", path = "03/control_flow.rs" },
  { name = "guess_number", path = "02/guess_number.rs" },
  { name = "ownership", path = "04/ownership.rs" },
  { name = "reference_and_borrowing", path = "04/reference_and_borrowing.rs" },
  { name = "slice", path = "04/slice.rs" },
  { name = "struct", path = "05/struct.rs" },
  { name = "rectangles", path = "05/rectangles.rs" },
  { name = "enum", path = "06/enum.rs" },
  { name = "match", path = "06/match.rs" },
  { name = "option", path = "06/option.rs" },
  { name = "if_let", path = "06/if_let.rs" },
  { name = "vector", path = "08/vector.rs" },
  { name = "string", path = "08/string.rs" },
  { name = "hashmap", path = "08/hashmap.rs" },
  { name = "panic", path = "09/panic.rs" },
  { name = "result", path = "09/result.rs" },
]

[package]
name = "rust-review"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
rand = "0.8.5"
